--- a/css/header.css
+++ b/css/header.css
@@ -21,5 +21,6 @@ header{
     transition: all 1s;
 }
 .links-container a:hover{
-    color: var(--ac);
+    /*color: lightslategrey;*/
+    color: var(--accent-color);
 }
