--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ main{
     font-size: 8rem;
     line-height: 4.5rem;
     color: #fff;
+    font-weight: 400;
 }
 
 .content-container h1 span{
@@ -25,22 +26,24 @@ main{
     font-weight: 200;
 }
 
-.movie-tittle{
+.movie-title{
     font-size: 3rem;
-    color: red
+    color: var(--accent-color);
+    font-weight: 200;
+    font-style: italic;
 }
 
 .movie-text{
     width: 600px;
     font-size: 1.1rem;
     color: #fff;
-    fon
+    font-weight: 200;
 }
 
 .button{
     height: 80px;
     width: 300px;
-    background-color: red;
+    background-color: var(--accent-color);
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -50,7 +53,32 @@ main{
     font-style: italic;
 }
 
-.social-container{
-    background-color: blue;
+.social-container ul {
+    height: 100%;
     width: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+}
+
+.social-container a:hover{
+    background-color: var(--accent-color);
+    /*border-color: var(--accent-color);*/
+}
+
+.social-container a{
+    height: 48px;
+    width: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    transition: all .7s;
+}
+
+.social-container i{
+    font-size: 1.5rem;
 }
