--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,12 @@ body{
     flex-direction: column;
     padding: 0 128px;
 }
+@media (max-width: 786px){
+    body{
+    padding: 0 30px;
+    background-color: #0009;
+    background-image: url(../Img/background.png);
+    background-blend-mode: darken;
+    background-position: 90%;
+    }
+}
