--- a/pages/videos.css
+++ b/pages/videos.css
@@ -1,3 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a{
+    text-decoration: none; 
+    color: #fff;
+}
+
+ul, ol{
+    list-style: none;
+}
+
 header{
     /*background-color: aqua;*/
     height: 120px;
@@ -5,6 +20,7 @@ header{
     justify-content: space-between;
     align-items: flex-end;
 }
+
 .links-container{
     height: 36px;
     /*background-color: grey;*/
@@ -25,11 +41,14 @@ header{
     color: var(--accent-color);
 }
 
-@media (max-width: 768px){
-    header{
-        height: 70px;
-    }
-    .links-container{
-        display: none;
-    }
+body{
+    height: 100vh;
+    background: url(../Img/background.png);
+    background-blend-mode: darken;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    display: flex;
+    flex-direction: column;
+    padding: 0 128px;
 }
