--- a/pages/personagens.css
+++ b/pages/personagens.css
@@ -58,7 +58,7 @@ main{
     font-family: 'Mulish', sans-serif;
 }
 
-.doctor{
+.doctor1{
     position: absolute;
     width: 516px;
     height: 68px;
