--- a/pages/galeria.css
+++ b/pages/galeria.css
@@ -31,7 +31,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 40px;
+    padding: 0 128px;
 }
 .links-container{
     height: 36px;
@@ -64,6 +64,7 @@ header{
     flex-direction: column;
     gap: 50px;
     align-items: center;
+    margin-top: 30px;
 }
 
 .grupo2{
@@ -71,6 +72,7 @@ header{
     flex-direction: column;
     gap: 50px;
     align-items: center;
+    margin-top: 30px;
 }
 
 .img1{
