--- a/pages/galeria.css
+++ b/pages/galeria.css
@@ -12,11 +12,15 @@ a{
 ul, ol{
     list-style: none;
 }
-body{
+html {
     height: 100vh;
+    width: 100vw;
+}
+body{
     background: url(../Img/imagem-de-fundo.png);
     position: absolute;
     width: 100vw;
+    max-width: 100px;
     height: 100vh;
     left: 0px;
     top: 0px;
@@ -55,7 +59,7 @@ header{
     display: flex;
     position: relative;
     justify-content: flex-end;
-    margin-left: 700px;
+    margin-left: 60rem;
     justify-content: space-evenly;
 }
 
@@ -76,21 +80,21 @@ header{
 }
 
 .img1{
-    height: 500px;
-    width: 450px;
+    height: 15rem;
+    width: 20rem;
 }
 
 .img2{
-    height: 200px;
-    width: 500px;
+    height: 15rem;
+    width: 20rem;
 }
 
 .img3{
-    height: 500px;
-    width: 450px;
+    height: 15rem;
+    width: 20rem;
 }
 
 .img4{
-    height: 200px;
-    width: 500px;
+    height: 15rem;
+    width: 20rem;
 }
