--- a/pages/personagens.css
+++ b/pages/personagens.css
@@ -82,6 +82,11 @@ h3{
 }
 
 @media (max-width: 768px){
+    body, html{
+        position: relative;
+        overflow-x: hidden;
+    }
+    
     header{
         height: 70px;
     }
